# godot-mcp

./: .gitignore  README.md  pyproject.toml
src/godot_mcp/: __main__.py  godot.py  protocol.py  server.py
src/godot_mcp/templates/: add_node.gd  add_primitive_mesh.gd  attach_script.gd  bootstrap_project.gd  camera_controller.gd  create_scene.gd  edit_primitive_mesh.gd  edit_scene.gd  get_node_properties.gd  get_node_transform.gd  inspect_scene.gd  profiler.gd  update_node_transform.gd  update_project_settings.gd  validate_scene.gd
tests/: test_godot_mcp.py
