[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mcp"
version = "0.1.0"
description = "A dependency-free MCP server for driving Godot 4.5+ projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mehran Goudarzi", email = "skullboxmhrn@gmail.com" },
  { name = "Mehrzad Sepahi", email = "mehrzadsepahi@icloud.com" }
]
license = { text = "MIT" }

[project.scripts]
godot-mcp = "godot_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
godot_mcp = ["templates/*.gd"]

